--- a/c.math.html
+++ b/c.math.html
@@ -444,17 +444,17 @@ namespace std {
   float        betaf(float x, float y);
   long double  betal(long double x, long double y);
 
-  <span class='comment'>// <a href='sf.cmath.comp_ellint_1'>[sf.cmath.comp_ellint_1]</a>, (complete) elliptic integral of the first kind
+  <span class='comment'>// <a href='sf.cmath.comp_ellint_1'>[sf.cmath.comp_ellint_1]</a>, complete elliptic integral of the first kind
 </span>  double       comp_ellint_1(double k);
   float        comp_ellint_1f(float k);
   long double  comp_ellint_1l(long double k);
 
-  <span class='comment'>// <a href='sf.cmath.comp_ellint_2'>[sf.cmath.comp_ellint_2]</a>, (complete) elliptic integral of the second kind
+  <span class='comment'>// <a href='sf.cmath.comp_ellint_2'>[sf.cmath.comp_ellint_2]</a>, complete elliptic integral of the second kind
 </span>  double       comp_ellint_2(double k);
   float        comp_ellint_2f(float k);
   long double  comp_ellint_2l(long double k);
 
-  <span class='comment'>// <a href='sf.cmath.comp_ellint_3'>[sf.cmath.comp_ellint_3]</a>, (complete) elliptic integral of the third kind
+  <span class='comment'>// <a href='sf.cmath.comp_ellint_3'>[sf.cmath.comp_ellint_3]</a>, complete elliptic integral of the third kind
 </span>  double       comp_ellint_3(double k, double nu);
   float        comp_ellint_3f(float k, float nu);
   long double  comp_ellint_3l(long double k, long double nu);
@@ -464,7 +464,7 @@ namespace std {
   float        cyl_bessel_if(float nu, float x);
   long double  cyl_bessel_il(long double nu, long double x);
 
-  <span class='comment'>// <a href='sf.cmath.cyl_bessel_j'>[sf.cmath.cyl_bessel_j]</a>, cylindrical Bessel functions (of the first kind)
+  <span class='comment'>// <a href='sf.cmath.cyl_bessel_j'>[sf.cmath.cyl_bessel_j]</a>, cylindrical Bessel functions of the first kind
 </span>  double       cyl_bessel_j(double nu, double x);
   float        cyl_bessel_jf(float nu, float x);
   long double  cyl_bessel_jl(long double nu, long double x);
@@ -475,22 +475,22 @@ namespace std {
   long double  cyl_bessel_kl(long double nu, long double x);
 
   <span class='comment'>// <a href='sf.cmath.cyl_neumann'>[sf.cmath.cyl_neumann]</a>, cylindrical Neumann functions;
-</span>  <span class='comment'>// cylindrical Bessel functions (of the second kind):
+</span>  <span class='comment'>// cylindrical Bessel functions of the second kind
 </span>  double       cyl_neumann(double nu, double x);
   float        cyl_neumannf(float nu, float x);
   long double  cyl_neumannl(long double nu, long double x);
 
-  <span class='comment'>// <a href='sf.cmath.ellint_1'>[sf.cmath.ellint_1]</a>, (incomplete) elliptic integral of the first kind
+  <span class='comment'>// <a href='sf.cmath.ellint_1'>[sf.cmath.ellint_1]</a>, incomplete elliptic integral of the first kind
 </span>  double       ellint_1(double k, double phi);
   float        ellint_1f(float k, float phi);
   long double  ellint_1l(long double k, long double phi);
 
-  <span class='comment'>// <a href='sf.cmath.ellint_2'>[sf.cmath.ellint_2]</a>, (incomplete) elliptic integral of the second kind
+  <span class='comment'>// <a href='sf.cmath.ellint_2'>[sf.cmath.ellint_2]</a>, incomplete elliptic integral of the second kind
 </span>  double       ellint_2(double k, double phi);
   float        ellint_2f(float k, float phi);
   long double  ellint_2l(long double k, long double phi);
 
-  <span class='comment'>// <a href='sf.cmath.ellint_3'>[sf.cmath.ellint_3]</a>, (incomplete) elliptic integral of the third kind
+  <span class='comment'>// <a href='sf.cmath.ellint_3'>[sf.cmath.ellint_3]</a>, incomplete elliptic integral of the third kind
 </span>  double       ellint_3(double k, double nu, double phi);
   float        ellint_3f(float k, float nu, float phi);
   long double  ellint_3l(long double k, long double nu, long double phi);
@@ -520,7 +520,7 @@ namespace std {
   float        riemann_zetaf(float x);
   long double  riemann_zetal(long double x);
 
-  <span class='comment'>// <a href='sf.cmath.sph_bessel'>[sf.cmath.sph_bessel]</a>, spherical Bessel functions (of the first kind)
+  <span class='comment'>// <a href='sf.cmath.sph_bessel'>[sf.cmath.sph_bessel]</a>, spherical Bessel functions of the first kind
 </span>  double       sph_bessel(unsigned n, double x);
   float        sph_besself(unsigned n, float x);
   long double  sph_bessell(unsigned n, long double x);
@@ -531,7 +531,7 @@ namespace std {
   long double  sph_legendrel(unsigned l, unsigned m, long double theta);
 
   <span class='comment'>// <a href='sf.cmath.sph_neumann'>[sf.cmath.sph_neumann]</a>, spherical Neumann functions;
-</span>  <span class='comment'>// spherical Bessel functions (of the second kind):
+</span>  <span class='comment'>// spherical Bessel functions of the second kind:
 </span>  double       sph_neumann(unsigned n, double x);
   float        sph_neumannf(unsigned n, float x);
   long double  sph_neumannl(unsigned n, long double x);
@@ -692,7 +692,7 @@ of their respective arguments
 where
 <span class='math'><span class='mathalpha'>x</span></span> is <span class='texttt'>x</span> and
 <span class='math'><span class='mathalpha'>y</span></span> is <span class='texttt'>y</span>.
-</p></div></div></div><div id='sf.cmath.comp_ellint_1'><h4 ><a class='secnum' href='#sf.cmath.comp_ellint_1' style='min-width:118pt'>26.9.5.4</a> (Complete) elliptic integral of the first kind <a class='abbr_ref' href='sf.cmath.comp_ellint_1'>[sf.cmath.comp_ellint_1]</a></h4><p ><span class='indexparent'><a class='index' id='comp_ellint_1'></a></span><span class='indexparent'><a class='index' id='comp_ellint_1f'></a></span><span class='indexparent'><a class='index' id='comp_ellint_1l'></a></span><span class='indexparent'><a class='index' id='elliptic_integrals,complete_K'></a></span><span class='indexparent'><a class='index' id='K_complete'></a></span><code class='itemdecl'>
+</p></div></div></div><div id='sf.cmath.comp_ellint_1'><h4 ><a class='secnum' href='#sf.cmath.comp_ellint_1' style='min-width:118pt'>26.9.5.4</a> Complete elliptic integral of the first kind <a class='abbr_ref' href='sf.cmath.comp_ellint_1'>[sf.cmath.comp_ellint_1]</a></h4><p ><span class='indexparent'><a class='index' id='comp_ellint_1'></a></span><span class='indexparent'><a class='index' id='comp_ellint_1f'></a></span><span class='indexparent'><a class='index' id='comp_ellint_1l'></a></span><span class='indexparent'><a class='index' id='elliptic_integrals,complete_K'></a></span><span class='indexparent'><a class='index' id='K_complete'></a></span><code class='itemdecl'>
 double       comp_ellint_1(double k);
 float        comp_ellint_1f(float k);
 long double  comp_ellint_1l(long double k);
@@ -707,7 +707,7 @@ of their respective arguments
 </span>
 where
 <span class='math'><span class='mathalpha'>k</span></span> is <span class='texttt'>k</span>.</p></div></div><div class='para' id='sf.cmath.comp_ellint_1-3'><div class='marginalizedparent'><a class='marginalized' href='#sf.cmath.comp_ellint_1-3'>3</a></div><div class='itemdescr'><p >See also <a href='sf.cmath.ellint_1'>[sf.cmath.ellint_1]</a>.
-</p></div></div></div><div id='sf.cmath.comp_ellint_2'><h4 ><a class='secnum' href='#sf.cmath.comp_ellint_2' style='min-width:118pt'>26.9.5.5</a> (Complete) elliptic integral of the second kind <a class='abbr_ref' href='sf.cmath.comp_ellint_2'>[sf.cmath.comp_ellint_2]</a></h4><p ><span class='indexparent'><a class='index' id='comp_ellint_2'></a></span><span class='indexparent'><a class='index' id='comp_ellint_2f'></a></span><span class='indexparent'><a class='index' id='comp_ellint_2l'></a></span><span class='indexparent'><a class='index' id='elliptic_integrals,complete_E'></a></span><span class='indexparent'><a class='index' id='E_complete'></a></span><code class='itemdecl'>
+</p></div></div></div><div id='sf.cmath.comp_ellint_2'><h4 ><a class='secnum' href='#sf.cmath.comp_ellint_2' style='min-width:118pt'>26.9.5.5</a> Complete elliptic integral of the second kind <a class='abbr_ref' href='sf.cmath.comp_ellint_2'>[sf.cmath.comp_ellint_2]</a></h4><p ><span class='indexparent'><a class='index' id='comp_ellint_2'></a></span><span class='indexparent'><a class='index' id='comp_ellint_2f'></a></span><span class='indexparent'><a class='index' id='comp_ellint_2l'></a></span><span class='indexparent'><a class='index' id='elliptic_integrals,complete_E'></a></span><span class='indexparent'><a class='index' id='E_complete'></a></span><code class='itemdecl'>
 double       comp_ellint_2(double k);
 float        comp_ellint_2f(float k);
 long double  comp_ellint_2l(long double k);
@@ -722,7 +722,7 @@ of their respective arguments
 </span>
 where
 <span class='math'><span class='mathalpha'>k</span></span> is <span class='texttt'>k</span>.</p></div></div><div class='para' id='sf.cmath.comp_ellint_2-3'><div class='marginalizedparent'><a class='marginalized' href='#sf.cmath.comp_ellint_2-3'>3</a></div><div class='itemdescr'><p >See also <a href='sf.cmath.ellint_2'>[sf.cmath.ellint_2]</a>.
-</p></div></div></div><div id='sf.cmath.comp_ellint_3'><h4 ><a class='secnum' href='#sf.cmath.comp_ellint_3' style='min-width:118pt'>26.9.5.6</a> (Complete) elliptic integral of the third kind <a class='abbr_ref' href='sf.cmath.comp_ellint_3'>[sf.cmath.comp_ellint_3]</a></h4><p ><span class='indexparent'><a class='index' id='comp_ellint_3'></a></span><span class='indexparent'><a class='index' id='comp_ellint_3f'></a></span><span class='indexparent'><a class='index' id='comp_ellint_3l'></a></span><span class='indexparent'><a class='index' id='elliptic_integrals,complete_Π'></a></span><span class='indexparent'><a class='index' id='Pi_complete'></a></span><code class='itemdecl'>
+</p></div></div></div><div id='sf.cmath.comp_ellint_3'><h4 ><a class='secnum' href='#sf.cmath.comp_ellint_3' style='min-width:118pt'>26.9.5.6</a> Complete elliptic integral of the third kind <a class='abbr_ref' href='sf.cmath.comp_ellint_3'>[sf.cmath.comp_ellint_3]</a></h4><p ><span class='indexparent'><a class='index' id='comp_ellint_3'></a></span><span class='indexparent'><a class='index' id='comp_ellint_3f'></a></span><span class='indexparent'><a class='index' id='comp_ellint_3l'></a></span><span class='indexparent'><a class='index' id='elliptic_integrals,complete_Π'></a></span><span class='indexparent'><a class='index' id='Pi_complete'></a></span><code class='itemdecl'>
 double       comp_ellint_3(double k, double nu);
 float        comp_ellint_3f(float k, float nu);
 long double  comp_ellint_3l(long double k, long double nu);
@@ -760,7 +760,7 @@ where
 The effect of calling each of these functions
 is <span class='indexparent'><a class='index' id='effect_of_calling_regular_modified_cylindrical_Bessel_functions_with_nu_>=_128'></a></span>implementation-defined
 if <span class='texttt'>nu &gt;= 128</span>.</p></div></div><div class='para' id='sf.cmath.cyl_bessel_i-4'><div class='marginalizedparent'><a class='marginalized' href='#sf.cmath.cyl_bessel_i-4'>4</a></div><div class='itemdescr'><p >See also <a href='sf.cmath.cyl_bessel_j'>[sf.cmath.cyl_bessel_j]</a>.
-</p></div></div></div><div id='sf.cmath.cyl_bessel_j'><h4 ><a class='secnum' href='#sf.cmath.cyl_bessel_j' style='min-width:118pt'>26.9.5.8</a> Cylindrical Bessel functions (of the first kind) <a class='abbr_ref' href='sf.cmath.cyl_bessel_j'>[sf.cmath.cyl_bessel_j]</a></h4><p ><span class='indexparent'><a class='index' id='cyl_bessel_j'></a></span><span class='indexparent'><a class='index' id='cyl_bessel_jf'></a></span><span class='indexparent'><a class='index' id='cyl_bessel_jl'></a></span><span class='indexparent'><a class='index' id='Bessel_functions,J_ν'></a></span><span class='indexparent'><a class='index' id='J_nu'></a></span><code class='itemdecl'>
+</p></div></div></div><div id='sf.cmath.cyl_bessel_j'><h4 ><a class='secnum' href='#sf.cmath.cyl_bessel_j' style='min-width:118pt'>26.9.5.8</a> Cylindrical Bessel functions of the first kind <a class='abbr_ref' href='sf.cmath.cyl_bessel_j'>[sf.cmath.cyl_bessel_j]</a></h4><p ><span class='indexparent'><a class='index' id='cyl_bessel_j'></a></span><span class='indexparent'><a class='index' id='cyl_bessel_jf'></a></span><span class='indexparent'><a class='index' id='cyl_bessel_jl'></a></span><span class='indexparent'><a class='index' id='Bessel_functions,J_ν'></a></span><span class='indexparent'><a class='index' id='J_nu'></a></span><code class='itemdecl'>
 double       cyl_bessel_j(double nu, double x);
 float        cyl_bessel_jf(float nu, float x);
 long double  cyl_bessel_jl(long double nu, long double x);
@@ -851,7 +851,7 @@ where
 The effect of calling each of these functions
 is <span class='indexparent'><a class='index' id='effect_of_calling_cylindrical_Neumann_functions_with_nu_>=_128'></a></span>implementation-defined
 if <span class='texttt'>nu &gt;= 128</span>.</p></div></div><div class='para' id='sf.cmath.cyl_neumann-4'><div class='marginalizedparent'><a class='marginalized' href='#sf.cmath.cyl_neumann-4'>4</a></div><div class='itemdescr'><p >See also <a href='sf.cmath.cyl_bessel_j'>[sf.cmath.cyl_bessel_j]</a>.
-</p></div></div></div><div id='sf.cmath.ellint_1'><h4 ><a class='secnum' href='#sf.cmath.ellint_1' style='min-width:118pt'>26.9.5.11</a> (Incomplete) elliptic integral of the first kind <a class='abbr_ref' href='sf.cmath.ellint_1'>[sf.cmath.ellint_1]</a></h4><p ><span class='indexparent'><a class='index' id='ellint_1'></a></span><span class='indexparent'><a class='index' id='ellint_1f'></a></span><span class='indexparent'><a class='index' id='ellint_1l'></a></span><span class='indexparent'><a class='index' id='elliptic_integrals,incomplete_F'></a></span><span class='indexparent'><a class='index' id='F_incomplete'></a></span><code class='itemdecl'>
+</p></div></div></div><div id='sf.cmath.ellint_1'><h4 ><a class='secnum' href='#sf.cmath.ellint_1' style='min-width:118pt'>26.9.5.11</a> Incomplete elliptic integral of the first kind <a class='abbr_ref' href='sf.cmath.ellint_1'>[sf.cmath.ellint_1]</a></h4><p ><span class='indexparent'><a class='index' id='ellint_1'></a></span><span class='indexparent'><a class='index' id='ellint_1f'></a></span><span class='indexparent'><a class='index' id='ellint_1l'></a></span><span class='indexparent'><a class='index' id='elliptic_integrals,incomplete_F'></a></span><span class='indexparent'><a class='index' id='F_incomplete'></a></span><code class='itemdecl'>
 double       ellint_1(double k, double phi);
 float        ellint_1f(float k, float phi);
 long double  ellint_1l(long double k, long double phi);
@@ -869,7 +869,7 @@ of their respective arguments
 where
 <span class='math'><span class='mathalpha'>k</span></span> is <span class='texttt'>k</span> and
 <span class='math'><span class='mathalpha'>phi</span></span> is <span class='texttt'>phi</span>.
-</p></div></div></div><div id='sf.cmath.ellint_2'><h4 ><a class='secnum' href='#sf.cmath.ellint_2' style='min-width:118pt'>26.9.5.12</a> (Incomplete) elliptic integral of the second kind <a class='abbr_ref' href='sf.cmath.ellint_2'>[sf.cmath.ellint_2]</a></h4><p ><span class='indexparent'><a class='index' id='ellint_2'></a></span><span class='indexparent'><a class='index' id='ellint_2f'></a></span><span class='indexparent'><a class='index' id='ellint_2l'></a></span><span class='indexparent'><a class='index' id='elliptic_integrals,incomplete_E'></a></span><span class='indexparent'><a class='index' id='E_incomplete'></a></span><code class='itemdecl'>
+</p></div></div></div><div id='sf.cmath.ellint_2'><h4 ><a class='secnum' href='#sf.cmath.ellint_2' style='min-width:118pt'>26.9.5.12</a> Incomplete elliptic integral of the second kind <a class='abbr_ref' href='sf.cmath.ellint_2'>[sf.cmath.ellint_2]</a></h4><p ><span class='indexparent'><a class='index' id='ellint_2'></a></span><span class='indexparent'><a class='index' id='ellint_2f'></a></span><span class='indexparent'><a class='index' id='ellint_2l'></a></span><span class='indexparent'><a class='index' id='elliptic_integrals,incomplete_E'></a></span><span class='indexparent'><a class='index' id='E_incomplete'></a></span><code class='itemdecl'>
 double       ellint_2(double k, double phi);
 float        ellint_2f(float k, float phi);
 long double  ellint_2l(long double k, long double phi);
@@ -886,7 +886,7 @@ of their respective arguments
 where
 <span class='math'><span class='mathalpha'>k</span></span> is <span class='texttt'>k</span> and
 <span class='math'><span class='mathalpha'>phi</span></span> is <span class='texttt'>phi</span>.
-</p></div></div></div><div id='sf.cmath.ellint_3'><h4 ><a class='secnum' href='#sf.cmath.ellint_3' style='min-width:118pt'>26.9.5.13</a> (Incomplete) elliptic integral of the third kind <a class='abbr_ref' href='sf.cmath.ellint_3'>[sf.cmath.ellint_3]</a></h4><p ><span class='indexparent'><a class='index' id='ellint_3'></a></span><span class='indexparent'><a class='index' id='ellint_3f'></a></span><span class='indexparent'><a class='index' id='ellint_3l'></a></span><span class='indexparent'><a class='index' id='elliptic_integrals,incomplete_Π'></a></span><span class='indexparent'><a class='index' id='Pi_incomplete'></a></span><code class='itemdecl'>
+</p></div></div></div><div id='sf.cmath.ellint_3'><h4 ><a class='secnum' href='#sf.cmath.ellint_3' style='min-width:118pt'>26.9.5.13</a> Incomplete elliptic integral of the third kind <a class='abbr_ref' href='sf.cmath.ellint_3'>[sf.cmath.ellint_3]</a></h4><p ><span class='indexparent'><a class='index' id='ellint_3'></a></span><span class='indexparent'><a class='index' id='ellint_3f'></a></span><span class='indexparent'><a class='index' id='ellint_3l'></a></span><span class='indexparent'><a class='index' id='elliptic_integrals,incomplete_Π'></a></span><span class='indexparent'><a class='index' id='Pi_incomplete'></a></span><code class='itemdecl'>
 double       ellint_3(double k, double nu, double phi);
 float        ellint_3f(float k, float nu, float phi);
 long double  ellint_3l(long double k, long double nu, long double phi);
@@ -1014,7 +1014,7 @@ of their respective arguments
 \]'/>
 where
 <span class='math'><span class='mathalpha'>x</span></span> is <span class='texttt'>x</span>.
-</p></div></div></div><div id='sf.cmath.sph_bessel'><h4 ><a class='secnum' href='#sf.cmath.sph_bessel' style='min-width:118pt'>26.9.5.19</a> Spherical Bessel functions (of the first kind) <a class='abbr_ref' href='sf.cmath.sph_bessel'>[sf.cmath.sph_bessel]</a></h4><p ><span class='indexparent'><a class='index' id='sph_bessel'></a></span><span class='indexparent'><a class='index' id='sph_besself'></a></span><span class='indexparent'><a class='index' id='sph_bessell'></a></span><span class='indexparent'><a class='index' id='Bessel_functions,j_n'></a></span><span class='indexparent'><a class='index' id='j_n'></a></span><code class='itemdecl'>
+</p></div></div></div><div id='sf.cmath.sph_bessel'><h4 ><a class='secnum' href='#sf.cmath.sph_bessel' style='min-width:118pt'>26.9.5.19</a> Spherical Bessel functions of the first kind <a class='abbr_ref' href='sf.cmath.sph_bessel'>[sf.cmath.sph_bessel]</a></h4><p ><span class='indexparent'><a class='index' id='sph_bessel'></a></span><span class='indexparent'><a class='index' id='sph_besself'></a></span><span class='indexparent'><a class='index' id='sph_bessell'></a></span><span class='indexparent'><a class='index' id='Bessel_functions,j_n'></a></span><span class='indexparent'><a class='index' id='j_n'></a></span><code class='itemdecl'>
 double       sph_bessel(unsigned n, double x);
 float        sph_besself(unsigned n, float x);
 long double  sph_bessell(unsigned n, long double x);
