--- a/cmath.syn.html
+++ b/cmath.syn.html
@@ -444,17 +444,17 @@ namespace std {
   float        betaf(float x, float y);
   long double  betal(long double x, long double y);
 
-  <span class='comment'>// <a href='sf.cmath.comp_ellint_1'>[sf.cmath.comp_ellint_1]</a>, (complete) elliptic integral of the first kind
+  <span class='comment'>// <a href='sf.cmath.comp_ellint_1'>[sf.cmath.comp_ellint_1]</a>, complete elliptic integral of the first kind
 </span>  double       comp_ellint_1(double k);
   float        comp_ellint_1f(float k);
   long double  comp_ellint_1l(long double k);
 
-  <span class='comment'>// <a href='sf.cmath.comp_ellint_2'>[sf.cmath.comp_ellint_2]</a>, (complete) elliptic integral of the second kind
+  <span class='comment'>// <a href='sf.cmath.comp_ellint_2'>[sf.cmath.comp_ellint_2]</a>, complete elliptic integral of the second kind
 </span>  double       comp_ellint_2(double k);
   float        comp_ellint_2f(float k);
   long double  comp_ellint_2l(long double k);
 
-  <span class='comment'>// <a href='sf.cmath.comp_ellint_3'>[sf.cmath.comp_ellint_3]</a>, (complete) elliptic integral of the third kind
+  <span class='comment'>// <a href='sf.cmath.comp_ellint_3'>[sf.cmath.comp_ellint_3]</a>, complete elliptic integral of the third kind
 </span>  double       comp_ellint_3(double k, double nu);
   float        comp_ellint_3f(float k, float nu);
   long double  comp_ellint_3l(long double k, long double nu);
@@ -464,7 +464,7 @@ namespace std {
   float        cyl_bessel_if(float nu, float x);
   long double  cyl_bessel_il(long double nu, long double x);
 
-  <span class='comment'>// <a href='sf.cmath.cyl_bessel_j'>[sf.cmath.cyl_bessel_j]</a>, cylindrical Bessel functions (of the first kind)
+  <span class='comment'>// <a href='sf.cmath.cyl_bessel_j'>[sf.cmath.cyl_bessel_j]</a>, cylindrical Bessel functions of the first kind
 </span>  double       cyl_bessel_j(double nu, double x);
   float        cyl_bessel_jf(float nu, float x);
   long double  cyl_bessel_jl(long double nu, long double x);
@@ -475,22 +475,22 @@ namespace std {
   long double  cyl_bessel_kl(long double nu, long double x);
 
   <span class='comment'>// <a href='sf.cmath.cyl_neumann'>[sf.cmath.cyl_neumann]</a>, cylindrical Neumann functions;
-</span>  <span class='comment'>// cylindrical Bessel functions (of the second kind):
+</span>  <span class='comment'>// cylindrical Bessel functions of the second kind
 </span>  double       cyl_neumann(double nu, double x);
   float        cyl_neumannf(float nu, float x);
   long double  cyl_neumannl(long double nu, long double x);
 
-  <span class='comment'>// <a href='sf.cmath.ellint_1'>[sf.cmath.ellint_1]</a>, (incomplete) elliptic integral of the first kind
+  <span class='comment'>// <a href='sf.cmath.ellint_1'>[sf.cmath.ellint_1]</a>, incomplete elliptic integral of the first kind
 </span>  double       ellint_1(double k, double phi);
   float        ellint_1f(float k, float phi);
   long double  ellint_1l(long double k, long double phi);
 
-  <span class='comment'>// <a href='sf.cmath.ellint_2'>[sf.cmath.ellint_2]</a>, (incomplete) elliptic integral of the second kind
+  <span class='comment'>// <a href='sf.cmath.ellint_2'>[sf.cmath.ellint_2]</a>, incomplete elliptic integral of the second kind
 </span>  double       ellint_2(double k, double phi);
   float        ellint_2f(float k, float phi);
   long double  ellint_2l(long double k, long double phi);
 
-  <span class='comment'>// <a href='sf.cmath.ellint_3'>[sf.cmath.ellint_3]</a>, (incomplete) elliptic integral of the third kind
+  <span class='comment'>// <a href='sf.cmath.ellint_3'>[sf.cmath.ellint_3]</a>, incomplete elliptic integral of the third kind
 </span>  double       ellint_3(double k, double nu, double phi);
   float        ellint_3f(float k, float nu, float phi);
   long double  ellint_3l(long double k, long double nu, long double phi);
@@ -520,7 +520,7 @@ namespace std {
   float        riemann_zetaf(float x);
   long double  riemann_zetal(long double x);
 
-  <span class='comment'>// <a href='sf.cmath.sph_bessel'>[sf.cmath.sph_bessel]</a>, spherical Bessel functions (of the first kind)
+  <span class='comment'>// <a href='sf.cmath.sph_bessel'>[sf.cmath.sph_bessel]</a>, spherical Bessel functions of the first kind
 </span>  double       sph_bessel(unsigned n, double x);
   float        sph_besself(unsigned n, float x);
   long double  sph_bessell(unsigned n, long double x);
@@ -531,7 +531,7 @@ namespace std {
   long double  sph_legendrel(unsigned l, unsigned m, long double theta);
 
   <span class='comment'>// <a href='sf.cmath.sph_neumann'>[sf.cmath.sph_neumann]</a>, spherical Neumann functions;
-</span>  <span class='comment'>// spherical Bessel functions (of the second kind):
+</span>  <span class='comment'>// spherical Bessel functions of the second kind:
 </span>  double       sph_neumann(unsigned n, double x);
   float        sph_neumannf(unsigned n, float x);
   long double  sph_neumannl(unsigned n, long double x);
